# spartan-key

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.svelte  CreateVault.svelte  Login.svelte  Vault.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  main.rs  securesting.rs  state.rs  vault.rs
src/lib/: NewVault.svelte  SelectVault.svelte  VaultPasswords.svelte
