[package]
name = "spartankey"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-save", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
aes-gcm = "0.10.1"
pbkdf2 = "0.12.1"
rand = "0.8.5"
sha2 = "0.10.6"
secstr = "0.5.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
